# image-editor

./: .clang-format  .gitignore  CMakeLists.txt
.VSCodeCounter/2026-03-30_13-40-36/: details.md  diff-details.md  diff.md  diff.txt  results.csv  results.json  results.md  results.txt
assets/shaders/: antialiasing.frag
constants/: constants.h
dependencies/: CMakeLists.txt
shaders/: background.frag  blur.frag  fill.frag
src/: App.cpp  App.h  main.cpp
src/core/asset_manager/: AssetManager.h  AssetMenager.cpp
src/core/global/: global.h
src/layer_system/compositor/: Compositor.cpp
src/layer_system/layer/: Layer.cpp  Layer.h
src/layer_system/layer_container/: LayerContainer.cpp  LayerContainer.h
src/layer_system/layer_viewer/: LayerViewer.cpp  LayerViewer.h
src/layer_system/viewport/: Viewport.cpp  Viewport.h
src/mode_system/: config.h  include.h  mode_system.h
src/mode_system/antialiased/: Antialiased.h
src/mode_system/base/: IMode.h  ISettings.h  base.h
src/mode_system/base/antialiased/: Antialiased.cpp  Antialiased.h
src/mode_system/base/buffered/: Buffered.cpp
src/mode_system/base/buffered_mode/: BufferedMode.cpp  BufferedMode.h
src/mode_system/base/colored/: Colored.h
src/mode_system/brush/: Brush.cpp  Brush.h
src/mode_system/buffered/: Buffered.h
src/mode_system/colored/: Colored.cpp
src/mode_system/fill/: Fill.cpp  Fill.h
src/mode_system/mode/: Mode.h
src/mode_system/mode_selector/: ModeSelector.cpp  ModeSelector.h
src/mode_system/pen/: Pen.cpp  Pen.h
src/mode_system/pencil/: Pencil.cpp  Pencil.h
src/mode_system/pencil2/: Pencil.cpp  Pencil.h
src/mode_system/thick/: Thick.cpp  Thick.h
src/utils/antialiaser/: Antialiaser.cpp  Antialiaser.h
src/utils/shaderer/: Shaderer.h
src/viewer_system/compositor/: Compositor.h
src/viewer_system/layer/: Layer.h
src/viewer_system/viewport/: Viewport.cpp  Viewport.h
(+21 files in other folders)
